# Formula-One-Telemetry-Simulator

./: .gitignore  CMakeLists.txt  README.md  benchmark.py
benchmarks/: CMakeLists.txt  bench_main.cpp  benchmark.py
learn/: lesson3.md  lesson4.md  lesson5.md  notes.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_s.md  plan.md
src/: CMakeLists.txt  main.cpp
src/common/: leaderboard.h  race_state.h  season_data.h  types.h
src/concurrency/: mpsc_queue.h  spsc_queue.h  thread_pool.cpp  thread_pool.h
src/data/: season_data.h
src/ingestion/: RingBuffer.h
src/race-control/: PenaltyEnforcer.cpp  PenaltyEnforcer.h  TrackLimitsMonitor.cpp  TrackLimitsMonitor.h
src/race_control/: penalty_enforcer.cpp  penalty_enforcer.h  track_limits.cpp  track_limits.h  weather.cpp  weather.h
src/simulation/: lap_barrier.h  lap_time_consumer.cpp  lap_time_consumer.h  pit_lane.h  race_director.h  telemetry_generator.cpp  telemetry_generator.h
src/strategy/: RaceSimulator.cpp  RaceSimulator.h  StrategyAnalyzer.cpp  StrategyAnalyzer.h  strategy_analyzer.cpp  strategy_analyzer.h
src/telemetry/: TelemetryGenerator.cpp  TelemetryGenerator.h
tests/: CMakeLists.txt
tests/phase2/: test_mpsc_queue.cpp  test_spsc_queue.cpp  test_thread_pool.cpp
tests/phase3/: test_barrier.cpp  test_latch.cpp  test_semaphore.cpp
tests/phase4/: test_penalty_enforcer.cpp  test_strategy_analyzer.cpp  test_track_limits.cpp
tests/phase5/: test_leaderboard.cpp
tests/phase_s/: test_integration.cpp
tests/test_concurrency/: test_spsc_queue.cpp  test_thread_pool.cpp
tests/test_race_control/: test_penalty_enforcer.cpp  test_weather.cpp
tests/test_shared_state/: test_leaderboard.cpp  test_race_state.cpp
tests/test_simulation/: test_lap_time_consumer.cpp
tests/test_telemetry/: test_telemetry_generator.cpp
tests/test_types/: test_types.cpp
